# Worldengine-Diffusion

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  diffusiondrive_migration_change1.md  diffusiondrive_migration_plan.md
projects/SimEngine/: init.sh  pyproject.toml  requirements.txt
projects/SimEngine/scripts/: export_simulation_data.py  merge_simulation_results.py  run_ray_distributed_rollout.sh  run_testing.sh
projects/SimEngine/worldengine/base_class/: __init__.py  base_runnable.py  config.py  configurable.py  nameable.py
projects/SimEngine/worldengine/common/: constants.py  dataclasses.py  randomizable.py
projects/SimEngine/worldengine/components/: parameter_space.py
projects/SimEngine/worldengine/components/agents/: autonomous_agent.py  base_agent.py  ego_agent.py
projects/SimEngine/worldengine/components/maps/: __init__.py  base_map.py  geometry_utils.py  (+2 more)
projects/SimEngine/worldengine/configs/: default_runner.yaml
projects/SimEngine/worldengine/engine/: base_engine.py  engine_utils.py
projects/SimEngine/worldengine/envs/: base_env.py  build_env.py
projects/SimEngine/worldengine/manager/: __init__.py  agent_manager.py  base_manager.py  data_manager.py  dense_reward_manager.py  map_manager.py  metric_manager.py  render_manager.py  scenario_manager.py
projects/SimEngine/worldengine/render/: base_renderer.py
projects/SimEngine/worldengine/runner/: executor.py  run_simulation.py  utils.py
projects/SimEngine/worldengine/utils/: __init__.py  agent_utils.py  config.py  geometry_utils.py  math_utils.py  random_utils.py  type.py  utils.py
(+292 files in other folders)
