[project]
name = "simengine"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aioboto3==10.4.0",
    "aiofiles==24.1.0",
    "boto3==1.24.59",
    "cachetools==5.2.0",
    "fiona==1.8.21",
    "geopandas>=0.12.1",
    "gsplat",
    "hydra-core==1.2.0",
    "imageio>=2.37.2",
    "matplotlib>=3.9.4",
    "ninja>=1.13.0",
    "numpy==1.26.4",
    "nuplan-devkit",
    "opencv-python==4.10.0.84",
    "pandas>=2.3.3",
    "pillow==10.4.0",
    "pip>=26.0",
    "psutil==7.0.0",
    "pyarrow>=21.0.0",
    "pyinstrument==5.1.1",
    "pyogrio==0.4.1",
    "pyquaternion>=0.9.5",
    "pytest==7.1.3",
    "pytorch-lightning==2.2.1",
    "rasterio==1.3.2",
    "ray==2.48.0",
    "retry==0.9.2",
    "scipy>=1.13.1",
    "setuptools==65.5.1",
    "shapely>=2.0.0",
    "sqlalchemy==1.4.27",
    "torch==2.0.1",
    "tqdm>=4.67.2",
    "urllib3==1.26.12",
    "wheel>=0.46.3",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
nuplan-devkit = { git = "https://github.com/motional/nuplan-devkit/", rev = "nuplan-devkit-v1.2" }
gsplat = { git = "https://github.com/nerfstudio-project/gsplat.git", rev = "v1.4.0" }

[tool.uv.extra-build-dependencies]
gsplat = ["torch"]
